--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "golang.go"
+  ,
+  "files.associations": {
+    "*.go.tmpl": "go"
+  }
 }
