--- a/tests/mug.yml
+++ b/tests/mug.yml
@@ -1,14 +1,14 @@
 # mug's config file.
 # You can delete this file and it will not polute your project's tree.
 # You can empty this file and run `mug` to reset it to default.
-debug: false
+debug: true
 
 features:
   watch: true
   inj_envs: true
   mod_tidy: true
-  gen_router: false
-  gen_envs: false
+  gen_router: true
+  gen_envs: true
 
 # TODO
 services:
