--- a/tests/mug.yml
+++ b/tests/mug.yml
@@ -1,7 +1,7 @@
 # mug's config file.
 # You can delete this file and it will not polute your project's tree.
 # You can empty this file and run `mug` to reset it to default.
-debug: true
+debug: false
 
 features:
   watch: true
