--- a/tests/mug.yml
+++ b/tests/mug.yml
@@ -1,14 +1,17 @@
 # mug's config file.
 # You can delete this file and it will not polute your project's tree.
 # You can empty this file and run `mug` to reset it to default.
-debug: false
+debug: true
 
 features:
-  watch: true
-  inj_envs: true
-  mod_tidy: true
-  gen_router: true
-  gen_envs: true
+  watch: true    # rebuilds on file save
+  inj_envs: true # inject your .env file
+  
+  # runs go mod tidy once when `mug` is called
+  startup_tidy: true
+  
+  gen_router: false # generates a router from '// mug:handler' annotations
+  gen_envs: false   # generates code from your .env file
 
 # TODO
 services:
