--- a/tests/mug.yml
+++ b/tests/mug.yml
@@ -10,8 +10,8 @@ features:
   # runs go mod tidy once when `mug` is called
   startup_tidy: true
   
-  gen_router: false # generates a router from '// mug:handler' annotations
-  gen_envs: false   # generates code from your .env file
+  gen_router: true # generates a router from '// mug:handler' annotations
+  gen_envs: true   # generates code from your .env file
 
 # TODO
 services:
