--- a/tests/.env
+++ b/tests/.env
@@ -2,3 +2,4 @@ TEST="TestValue1"
 MY_WEBSITE="https://lucas.schwalm.silva.vercel.app"
 
 RABBIT_URI=amqp://user:pass@localhost:5672/
+JWT_TOKEN_SECRET=your_jwt_secret_key
