--- a/tests/mug.yml
+++ b/tests/mug.yml
@@ -1,3 +1,6 @@
+# mug's config file.
+# You can delete this file and it will not polute your project's tree.
+# You can empty this file and run `mug init` to reset it to default.
 debug: false
 
 watch:
@@ -10,3 +13,4 @@ watch:
 gen:
   router: true
   envs: true
+  swagger: true
